# scribe-eval

./: .gitignore  .zenodo.json  CITATION.cff  CLAUDE.md  LICENSE  README.md  __init__.py  main.py  pyproject.toml  test_batch_aggregation.py  test_combined_denominator.py  test_edge_cases.py  test_reporting.py  visualizer.py
config/: README.md  legal_terms.txt  technical_terms.txt
docs/: architecture.md  batch-processing.md  domain-configuration.md  visualizer.md
examples/: README.md  batch_evaluate.py  custom_domain_file.py  error_report.py  evaluate.py  sample_legal.txt  test_domains.py  text_alignment.py
examples/dictation-eval/: predictions.jsonl
src/: align.py  evaluate.py  measure.py  predictions.jsonl  tokenize.py
src/dicterrors/: __init__.py  align.py  analysis.py  charts.py  constants.py  domain_config.py  measure.py  measure_batch.py  normalize.py  reporting.py  tokenize.py
src/dicterrors/config/: financial_terms.txt  legal_terms.txt
src/scribe/: __init__.py  align.py  analysis.py  charts.py  constants.py  domain_config.py  measure.py  measure_batch.py  reporting.py  tokenize.py
src/scribe/config/: medical_terms.txt  technical_terms.txt
src/scribe/visualizer/: __main__.py  app.py
tests/: conftest.py  test_align.py  test_analysis.py  test_domain_config.py  test_imports.py  test_measure.py  test_measure_batch.py  test_normalize.py  test_packaging.py  test_paper_cases.py  test_reporting.py  test_tokenize.py
