[project]
name = "scribe-eval"
version = "0.1.0"
description = "Diagnostic ASR evaluation with sandhi-tolerant alignment and categorical error decomposition for Indic and domain-specific speech recognition."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Kavya Manohar" },
]
keywords = [
    "asr",
    "speech-recognition",
    "evaluation",
    "wer",
    "sandhi",
    "error-analysis",
    "rich-transcription",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "jiwer>=4.0.0",
    "levenshtein>=0.27.1",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
charts = ["matplotlib>=3.7.0"]
visualizer = ["streamlit>=1.53.0", "pandas>=2.0.0", "matplotlib>=3.7.0"]
dev = ["pytest>=8.0", "pytest-cov", "ruff>=0.6", "mypy", "build", "twine"]

[project.urls]
Homepage = "https://github.com/adalat-ai-tech/scribe-eval"
Repository = "https://github.com/adalat-ai-tech/scribe-eval"
Issues = "https://github.com/adalat-ai-tech/scribe-eval/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scribe = ["config/*.txt"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
